--- a/templates/home.html
+++ b/templates/home.html
@@ -1,18 +1,42 @@
 <html>
-<head> BMTC </head>
-<title> BMTC </title>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1"> </head>
+<title>BMTC </title>
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<!-- Optional theme -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <link rel="stylesheet" href="/resources/demos/style.css">
+<link href="css/bootstrap.min.css" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+<!--script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"--></script>
+<script src="js/bootstrap.min.js"></script>
 <body>
+  <br/><br/>
   <form method="POST" action=""> {% csrf_token %}
-    <div class="ui-widget">
-    <input type="text" name="source" placeholder="Enter Source" id="src"></div>
-    <div class="ui-widget">
-    <input type="text" name="destination" placeholder="Destination" id="dst"></div>
-    <input type="submit" name="search" value="Search">
+    <div class = "row">
+      <div class="col-md-5 col-md-push-1">
+    <p class="lead">BMTC </p>
+    <div class="ui-widget form-group">
+    <label for="source">Source:</label>
+    <input type="text" name="source" class="form-control" placeholder="Enter Source" id="src"></div><br/>
+    <div class="ui-widget form-group">
+      <label for="destination">Destination:</label>
+    <input type="text" name="destination" class="form-control" placeholder="Destination" id="dst"></div></br>
+    <button type="submit" name="search" class="btn btn-success btn-lg btn-block">Search</button><br/>
+  </div>
+  </div>
   </form>
+  <div class="row">
+    <div class="col-md-5 col-md-push-1">
   {% if src and dest %}
   <b> Bus from: {{src}}  to {{dest}}<b><br>
     {% endif %}
@@ -22,17 +46,19 @@
   <b>Arrival Time : {{arrival_time}}</b><br>
   <b>Number of Stops : {{stops}}</b><br>
   {% endif %}
+  <div>
+</div>
 </body>
 <script>
 $( function() {
-var availableTags = {{bus_stops|safe}};
-$( "#src" ).autocomplete({
-source: availableTags
-});
-$( "#dst" ).autocomplete({
-source: availableTags
-});
-} );
+  var availableTags = {{bus_stops|safe}};
+  $( "#src" ).autocomplete({
+    source: availableTags
+  });
+  $( "#dst" ).autocomplete({
+    source: availableTags
+  });
+  } );
 </script>
 <!-- <script>
 $(document).ready( function(){
