--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1"> </head>
+  <meta name="viewport" content="width=device-width, initial-scale=1"></head>
 <title>BMTC </title>
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -17,24 +17,31 @@
 <link href="css/bootstrap.min.css" rel="stylesheet">
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<!--script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"--></script>
 <script src="js/bootstrap.min.js"></script>
 <body>
   <br/><br/>
+  <div class="container">
+  <div class = "row">
+    <div class="col-md-5 col-md-offset-1">
   <form method="POST" action=""> {% csrf_token %}
-    <div class = "row">
-      <div class="col-md-5 col-md-push-1">
     <p class="lead">BMTC </p>
     <div class="ui-widget form-group">
     <label for="source">Source:</label>
     <input type="text" name="source" class="form-control" placeholder="Enter Source" id="src"></div><br/>
     <div class="ui-widget form-group">
       <label for="destination">Destination:</label>
-    <input type="text" name="destination" class="form-control" placeholder="Destination" id="dst"></div></br>
+    <input type="text" name="destination" class="form-control" placeholder="Destination" id="dst"></div><br/>
     <button type="submit" name="search" class="btn btn-success btn-lg btn-block">Search</button><br/>
-  </div>
-  </div>
   </form>
+  </div>
+  <div class = "col-md-5">
+    {% if src and dest %}
+      {% include 'maptemplate.html' %}
+    {% endif %}
+  </div>
+</div>
+</div>
+<div class="container">
   <div class="row">
     <div class="col-md-5 col-md-push-1">
   {% if src and dest %}
@@ -46,8 +53,10 @@
   <b>Arrival Time : {{arrival_time}}</b><br>
   <b>Number of Stops : {{stops}}</b><br>
   {% endif %}
-  <div>
+  <div id="clock"></div>
 </div>
+</div>
+<div>
 </body>
 <script>
 $( function() {
@@ -60,22 +69,5 @@ $( function() {
   });
   } );
 </script>
-<!-- <script>
-$(document).ready( function(){
-  $('#src').change(function(){
-    var name = $(this).val();
-    var buses = ['ABCDEF','LAJDLA',"JSJHJHSDJH",'KHSJKDJS'];
-    $.ajax(function(){
-      type:"GET",
-      url:"/get_bus_stops/",
-      data :  {name: name},
-      success: function(data){
-        $("#src").autocomplete({
-          source:buses
-        })
-      }
-    })
-  })
-})
-</script> -->
+
 </html>
