--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1"></head>
 <title>BMTC </title>
 <!-- Latest compiled and minified CSS -->
+<script src="{% static 'js/jquery-1.12.4.js' %}"></script>
 <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 
 <!-- Optional theme -->
@@ -16,7 +17,6 @@
 <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 <link rel="stylesheet" href="/resources/demos/style.css">
 <link href="css/bootstrap.min.css" rel="stylesheet">
-<script src="{% static 'js/jquery-1.12.4.js' %}"></script>
 <script src="{% static 'js/jquery-ui.js' %}"></script>
 <script src="js/bootstrap.min.js"></script>
 <body>
@@ -32,12 +32,13 @@
     <div class="ui-widget form-group">
       <label for="destination">Destination:</label>
     <input type="text" name="destination" class="form-control" placeholder="Destination" id="dst"></div><br/>
-    <button type="submit" name="search" class="btn btn-success btn-lg btn-block">Search</button><br/>
+    <button type="submit" name="search" class="btn btn-success btn-lg">Search</button><br/>
   </form>
   </div>
   <div class = "col-md-5">
     {% if src and dest %}
       {% include 'maptemplate.html' %}
+      <button type="submit" name="trackbuses" id="trackbuses" class="btn btn-info btn-lg">Track Buses</button><br/>
     {% endif %}
   </div>
 </div>
@@ -48,17 +49,21 @@
   {% if src and dest %}
   <b> Bus from: {{src}}  to {{dest}}<b><br>
     {% endif %}
-  {% if route_no and arrival_time %}
+    {% if no_bus %}
+    <H3><b> No bus on this route </b></H3>
+    {% else %}
+    {% if arrival_time %}
   <b>Route No: {{route_no}}</b><br>
   <b>Bus title : {{bus_name}}</b><br>
   <b>Arrival Time : {{arrival_time}}</b><br>
   <b>Number of Stops : {{stops}}</b><br>
   {% endif %}
+  {% endif %}
 
 </div>
 <div class="col-md-5">
   <br/><br/>
-  {% if src and dest %}
+  {% if src and dest and not no_bus %}
     {% include 'countdown.html' %}
   {% endif %}
 </div>
