--- a/templates/home.html
+++ b/templates/home.html
@@ -25,7 +25,7 @@
   <div class = "row">
     <div class="col-md-5 col-md-offset-1">
   <form method="POST" action=""> {% csrf_token %}
-    <p class="lead">BMTC </p>
+    <p class="lead"><b>BMTC </b></p>
     <div class="ui-widget form-group">
     <label for="source">Source:</label>
     <input type="text" name="source" class="form-control" placeholder="Enter Source" id="src"></div><br/>
@@ -38,7 +38,7 @@
   <div class = "col-md-5">
     {% if src and dest %}
       {% include 'maptemplate.html' %}
-      <button type="submit" name="trackbuses" id="trackbuses" class="btn btn-info btn-lg">Track Buses</button><br/>
+      <button type="submit" name="trackbuses" id="trackbuses" class="btn btn-primary btn-lg">{{start_route}} Buses Live status</button><br/>
     {% endif %}
   </div>
 </div>
@@ -48,16 +48,22 @@
     <div class="col-md-5 col-md-offset-1">
   {% if src and dest %}
   <b> Bus from: {{src}}  to {{dest}}<b><br>
+    <br>
+    {% endif %}
+    {% if multi_route %}
+    <b> No direct buses! Transfer routes available </b><br><br>
     {% endif %}
     {% if no_bus %}
     <H3><b> No bus on this route </b></H3>
     {% else %}
-    {% if arrival_time %}
-  <b>Route No: {{route_no}}</b><br>
-  <b>Bus title : {{bus_name}}</b><br>
-  <b>Arrival Time : {{arrival_time}}</b><br>
-  <b>Number of Stops : {{stops}}</b><br>
-  {% endif %}
+    {% for bus in buses %}
+  <b>Route No: <font color="red">{{bus.route_no}}</font></b><br>
+  <b>Bus title : {{bus.bus_name}}</b><br>
+  <b>Departure Time : <font color="red">{{bus.departure_time}}</font></b><br>
+  <b>Arrival Time : {{bus.arrival_time}}</b><br>
+  <b>Number of Stops : {{bus.stops}}</b><br>
+  <br><br>
+  {% endfor %}
   {% endif %}
 
 </div>
