--- a/templates/home.html
+++ b/templates/home.html
@@ -59,7 +59,9 @@
     {% for bus in buses %}
   <b>Route No: <font color="red">{{bus.route_no}}</font></b><br>
   <b>Bus title : {{bus.bus_name}}</b><br>
+  <b>Departure Stop : <font color="red">{{bus.departure_stop}}</font></b><br>
   <b>Departure Time : <font color="red">{{bus.departure_time}}</font></b><br>
+  <b>Arrival Stop : {{bus.arrival_stop}}</b><br>
   <b>Arrival Time : {{bus.arrival_time}}</b><br>
   <b>Number of Stops : {{bus.stops}}</b><br>
   <br><br>
